--- a/src/app/movie-list/movie-list.scss
+++ b/src/app/movie-list/movie-list.scss
@@ -1,3 +1,12 @@
 .clearance{
     border: 3px solid green;
+    background: lightgreen; // Ver por que no me toma este back
+}
+
+td {
+    vertical-align: middle;
+}
+
+input {
+    max-width: 40px;
 }
