agrega componente input y comunicacion entre componentes

--- a/src/app/movie-list/movie-list.scss
+++ b/src/app/movie-list/movie-list.scss
@@ -1,12 +1,11 @@
 .clearance{
     border: 3px solid green;
-    background: lightgreen; // Ver por que no me toma este back
+    // background: lightgreen; // Ver por que no me toma este back (RARO ESTE)
 }
 
 td {
     vertical-align: middle;
 }
 
-input {
-    max-width: 40px;
-}
+
+
