--- a/src/app/movie-list/movie-list.html
+++ b/src/app/movie-list/movie-list.html
@@ -21,11 +21,11 @@
             }@else {
                 <td><span class="badge text-bg-danger" *ngIf="movie.quantityAvailable==0">Entradas agotadas</span></td>
             }
-            <td>
-                <button type="button" class="btn btn-light" (click)="downQuantity(movie)">-</button>
-                <input class="text-center" type="text" [(ngModel)]="movie.quantity" (keyup)="changeQuantity($event, movie)" (keydown)="soloNumeros($event)"> <!-- Ver esto de $event -->
-                <button type="button" class="btn btn-light" (click)="upQuantity(movie)">+</button>
-            </td>
+            @if (movie.quantityAvailable) {
+                <td>
+                    <app-input-integer [(quantity)]="movie.quantity" [max]="movie.quantityAvailable" (maxReached)="maxReached($event)"></app-input-integer>
+                </td>
+            }
         </tr>
         } @empty {
             <tr>
