--- a/src/app/shopping-cart/shopping-cart.html
+++ b/src/app/shopping-cart/shopping-cart.html
@@ -1,8 +1,7 @@
 <h2>Carrito de compras</h2>
-<table class="table">
-    <tr>
-        <td>Película</td>
-        <td>Cantidad de entradas</td>
-        <td>Total</td>
-    </tr>
-</table>
+@for (movie of cartList$ | async; track movie.name) {
+    <ul>
+        <li>{{movie.name}}: {{movie.quantity}}</li>
+    </ul>
+}
+
