--- a/src/app/cinema-about/cinema-about.html
+++ b/src/app/cinema-about/cinema-about.html
@@ -1,9 +1,26 @@
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui odit dolor, vel, totam quae earum provident fuga voluptates officiis expedita minus! In velit neque cumque quo sapiente eius suscipit nesciunt?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui odit dolor, vel, totam quae earum provident fuga voluptates officiis expedita minus! In velit neque cumque quo sapiente eius suscipit nesciunt?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui odit dolor, vel, totam quae earum provident fuga voluptates officiis expedita minus! In velit neque cumque quo sapiente eius suscipit nesciunt?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui odit dolor, vel, totam quae earum provident fuga voluptates officiis expedita minus! In velit neque cumque quo sapiente eius suscipit nesciunt?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui odit dolor, vel, totam quae earum provident fuga voluptates officiis expedita minus! In velit neque cumque quo sapiente eius suscipit nesciunt?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui odit dolor, vel, totam quae earum provident fuga voluptates officiis expedita minus! In velit neque cumque quo sapiente eius suscipit nesciunt?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui odit dolor, vel, totam quae earum provident fuga voluptates officiis expedita minus! In velit neque cumque quo sapiente eius suscipit nesciunt?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui odit dolor, vel, totam quae earum provident fuga voluptates officiis expedita minus! In velit neque cumque quo sapiente eius suscipit nesciunt?</p>
- <!-- Nombre - direccion - email - etc-- -->
+<div class="container my-5" id="contacto">
+  <h2 class="mb-4 text-center">Contáctanos</h2>
+  <p class="lead text-center mb-5">
+    ¿Tenés alguna consulta, sugerencia o necesitás ayuda con tu compra de entradas?<br>
+    Nuestro equipo está listo para asistirte y ofrecerte la mejor experiencia cinematográfica.
+  </p>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <ul class="list-group list-group-flush fs-5">
+        <li class="list-group-item">
+          <i class="bi bi-telephone-fill me-2"></i> Teléfono: +54 123 456 7890
+        </li>
+        <li class="list-group-item">
+          <i class="bi bi-envelope-fill me-2"></i> Email: contactocinemagang.com
+        </li>
+        <li class="list-group-item">
+          <i class="bi bi-geo-alt-fill me-2"></i> Dirección: Av. del Cine 123, Tandil, Argentina
+        </li>
+      </ul>
+      <p class="mt-4 text-center fst-italic">
+        ¡Esperamos tu mensaje y gracias por elegir CinemaGang para disfrutar del mejor cine!
+      </p>
+    </div>
+  </div>
+</div>
+
