--- a/src/app/app.html
+++ b/src/app/app.html
@@ -15,4 +15,6 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
-<footer>{{title}} 2025</footer>
+<footer class="text-center py-3 bg-dark text-light fixed-bottom">
+  {{title}} 2025
+</footer>
